<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    tools:context="com.example.android.mymusicapp.RadioActivity">

    <LinearLayout style="@style/LinearLayoutWithBackgroundColor">

        <TextView
            android:id="@+id/classic_rock_florida"
            style="@style/ListStyle"
            android:text="@string/radio1" />

        <TextView
            style="@style/ListStyle"
            android:text="@string/radio2" />

        <TextView
            style="@style/ListStyle"
            android:text="@string/radio3" />

        <TextView
            style="@style/ListStyle"
            android:text="@string/radio4" />

    </LinearLayout>

</ScrollView>